--- a/main.css
+++ b/main.css
@@ -1,38 +1,87 @@
-main {
-    font-size: 100px;
-}
-
+/* body,
+body * {
+margin: 0;
+padding: 0;
+vertical-align: top;
+box-sizing: border-box;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+word-break: break-all;
+} */
 body {
     display: inline-block;
-    background-image: url(images/bg-desktop.png);
+    background-image: url(./images/bg-desktop.png);
     background-repeat: no-repeat;
-    }
-
-
-@media (max-width: 375px) {
-body {
-    display: inline-block;
-    background-image: url(images/bg-mobile.png);
-    background-repeat: no-repeat;
-    font-size: 10px;
-    }
+    background-position: 50% -100%;
+    background-size: cover;
+    width: 2000px;
+    background-color: #0c122c;
 }
-
 main {
     display: inline-block;
-    margin-top: auto;
+    float: left;
+    margin-left: calc( (70% - 600px) / 2);
+    width: 1100px;
+    padding: 10px;
+    margin-top: 18%;
+    position: absolute;
 }
+
+/* .bg {
+    display:inline-block;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+    background-size: 50%;
+    margin-top: 25%;
+    margin-top: calc(50% - 125px)
+
+    position: absolute;
+    } */
+
+
+/* @media (max-width: 375px) {
+}*/
 
     .left {
         display: inline-block;
         float: left;
-        width: 30%;
-        padding: 10px;
+        width: 400px;
+        height: 180px;
+        padding: 20px;
+        position: relative;
+        background-color: #1e2c69;
+        border-radius: 15px 110px 15px 15px;
     }
 
+    .logo {
+        display: inline-block;
+        margin: 5% 60% 5% 5%;
+    }
+    a {
+        display: grid;
+        box-sizing: border-box;
+        float: left;
+        background-color: #0b122c;
+        border-radius: 12px;
+        width: 55px;
+        height: 55px;
+        margin-left: 5%;
+        margin-top: 5%;
+        gap: 50px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: center;
+    }
     .right {
         display: inline-block;
-        float: left;
-        width: 30%;
+        float: right;
+        width: 550px;
+        height: 200px;
         padding: 10px;
+        margin-left: 40px;
+        background-color: #1e2c69;
+        border-radius: 30px;
+        /* margin-left: -35%; */
+        position: absolute;
     }
